# lab-python-ci

./: Dockerfile  pyproject.toml  setup.py  teste.yaml
.github/workflows/: ci-poetry.yaml  ci-python.poetry.yaml  ci-python.pypi.yaml  ci-python.yaml  cronjob.yaml
my-app-poetry/: pyproject.toml
my-app-poetry/my-app-poetry/: pyproject.toml
